Hotfix: z-index fix on mobile screen

--- a/mobsf/static/landing/css/home.css
+++ b/mobsf/static/landing/css/home.css
@@ -56,6 +56,7 @@ body {
 /* Padding for spacing */
 .inner {
   padding: 30px;
+  z-index: 950;
 }
 
 
@@ -219,6 +220,7 @@ div#textnode {
   position: fixed;
   top: 0;
   width: 100%;
+  z-index: 1;
 }
 
 /* Style the links inside the navigation bar */
@@ -243,6 +245,7 @@ div#textnode {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  z-index: 999;
 }
 
 .topnav-centered a:hover {
